Fix android, removed deps

--- a/appIos/appIos/GoogleService-Info.plist
+++ b/appIos/appIos/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>ANDROID_CLIENT_ID</key>
 	<string>773204999483-2re3lif340c517effo652dq3p3h92p4i.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD8Lr_O1HH1ZSsiDa0OZ2mp5bwtEI-drLs</string>
+	<string>SOMERANDOMSTUFF</string>
 	<key>GCM_SENDER_ID</key>
 	<string>773204999483</string>
 	<key>PLIST_VERSION</key>
