--- a/build-library-compose.gradle
+++ b/build-library-compose.gradle
@@ -21,6 +21,6 @@ kotlin {
 }
 
 compose {
-    kotlinCompilerPlugin.set("androidx.compose.compiler:compiler:1.4.7-dev-k1.9.0-Beta-bb7dc8b44eb")
+    kotlinCompilerPlugin.set("androidx.compose.compiler:compiler:1.4.8-dev-k1.9.0-RC-5532d15c918")
 }
 
