--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,7 @@ android-sdk-compile = "33"
 android-sdk-min = "24"
 android-sdk-target = "33"
 
-kotlin = "1.9.0-Beta"
+kotlin = "1.9.0-RC"
 jvmtarget = "17"
 android-gradle-plugin = "8.0.2"
 androidx-activity-compose = "1.7.2"
@@ -49,7 +49,7 @@ firebase-appdistribution = "4.0.0"
 kotlinx-dateTime = "0.4.0"
 kotlinx-coroutines = "1.7.1"
 kotlinx-atomicfu = "0.20.2"
-compose-plugin = "1.5.0-dev1063"
+compose-plugin = "1.5.0-dev1074"
 compose-mp-flow = "0.30.1"
 desuger = "2.0.3"
 junit = "5.9.3"
